# rust-web-api

./: LICENSE
cr8s/: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
cr8s/migrations/2025-01-11-180648_create_crates/: up.sql
cr8s/src/: commands.rs  main.rs  models.rs  repositories.rs  schema.rs
cr8s/src/rocket_routes/: crates.rs  mod.rs  rustaceans.rs
cr8s/tests/: crates.rs  rustacean.rs
cr8s/tests/common/: mod.rs
