[package]
name = "cr8s"
version = "0.1.0"
edition = "2021"
default-run = "server"

[dependencies]
tokio = "1"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.1", features = ["chrono"] }
diesel-async = { version = "0.4", features = ["postgres"] }
rocket = { version = "0.5", features = ["json"] }
rocket_db_pools = { version = "0.1", features = ["diesel_postgres"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0" }
clap = { version = "4.4" }

[dev-dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
